--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,8 @@ hr {
     border-width: 0ch;
 }
 .section-header h2{
-    font-weight:700;
+    font-family: 'Montserrat-Bold', sans-serif;;
+    font-weight:bolder;
 }
 .section-header h3{
     font-weight: 300;
@@ -40,14 +41,10 @@ nav a {
     font-family: 'Special Elite', cursive;
     font-size: 1.3em ;
 }
-.navbar {
-    background-color: #c2bfac;
-}
 #navigation {
     font-family: 'Special Elite', cursive;
 }
 #brand {
-    margin-left: 4rem;
     font-size: 2rem;
     font-weight: bolder;
 }
@@ -55,7 +52,6 @@ nav a {
     margin-right: 30px;
 }
 .nav-item {
-    padding: 0 20px;
     margin: 0;
 }
 .nav-link {
@@ -81,13 +77,12 @@ nav a {
 .perks h2, h4 {
     padding: 1.2rem 0 0;
 }
-.symbols {
-    width: 100%;
+.symbol {
+    width: 30%;
     margin-top: 30px;
 }
 .perk:hover {
     background-color: #c2bfac;
-    padding:15px;
 }
 /* Gallery */
 #gallery {
@@ -114,4 +109,18 @@ nav a {
 #footer {
     text-align: center;
     font-weight: bold;
+}
+/* About */
+.profile {
+    padding: 10px;
+    width: 45%;
+    border-radius: 100%;
+    border-style: inset;
+    border-color: black;
+}
+
+/* carousel */
+.carousel-item {
+    width: 100%;
+    height: 100%;
 }
